win_tool: Added flight alarms setup
Also added board pictures for uart config (still work in progress)

--- a/software/windows_config_tool/AlceOSDconfigForm.resx
+++ b/software/windows_config_tool/AlceOSDconfigForm.resx
@@ -117,6 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="textBox1.Text" xml:space="preserve">
+    <value>High: Source normally above &lt;value&gt;. When source drops below &lt;value&gt; for more than &lt;delay&gt; ms, the alarm triggers.
+
+Low: Source normally below &lt;value&gt;. When source goes above the &lt;value&gt; for more than &lt;delay&gt; ms, the alarm triggers.</value>
+  </data>
   <metadata name="cm_widget.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
