--- a/software/windows_config_tool/Properties/Resources.resx
+++ b/software/windows_config_tool/Properties/Resources.resx
@@ -118,16 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="alceosd_hw0v4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alceosd_hw0v4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="alceosd_hw0v5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\alceosd_hw0v5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="alceosd_hw0v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\alceosd_hw0v2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="alceosd_hw0v3b" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alceosd_hw0v3b.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="alceosd_hw0v3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\alceosd_hw0v3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="alceosd_hw0v4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\alceosd_hw0v4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="alceosd_hw0v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alceosd_hw0v2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="alceosd_hw0v1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alceosd_hw0v1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
