--- a/software/windows_config_tool/AlceOSDconfigForm.resx
+++ b/software/windows_config_tool/AlceOSDconfigForm.resx
@@ -155,8 +155,11 @@
 
 Low: Source normally below &lt;value&gt;. When source goes above the &lt;value&gt; for more than &lt;delay&gt; ms, the alarm triggers.</value>
   </data>
+  <metadata name="timer_submit_cfg.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 33</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>40</value>
+    <value>72</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
